--- a/app/src/main/res/layout/fragment_current_medication.xml
+++ b/app/src/main/res/layout/fragment_current_medication.xml
@@ -12,7 +12,7 @@
         android:layout_height="wrap_content"
         android:text="No medication records to display"
         android:gravity="center"
-        android:paddingTop="@dimen/large_margin"
+        android:paddingTop="@dimen/large"
         android:textSize="20dp"
         android:textStyle="italic" />
 
