--- a/app/src/main/res/layout/activity_forget_password.xml
+++ b/app/src/main/res/layout/activity_forget_password.xml
@@ -23,7 +23,7 @@
     <TextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="@dimen/small_margin"
+        android:layout_marginTop="@dimen/small"
         android:textColor="@color/black3"
         android:text="Enter your email associated with your account. A temporary password will be sent to your email"/>
 
@@ -31,7 +31,7 @@
         android:id="@+id/email_edit_text"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="@dimen/small_margin"
+        android:layout_marginTop="@dimen/small"
         android:inputType="textEmailAddress"
         android:hint="Your email"/>
 
@@ -39,7 +39,7 @@
         android:id="@+id/forget_password_continue"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="@dimen/small_margin"
+        android:layout_marginTop="@dimen/small"
         android:background="@drawable/rectangle"
         android:backgroundTint="@color/blueButton"
         android:textColor="@color/greyE"
