--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -6,6 +6,7 @@
     <color name="colorAccent">#FF5252</color>
 
     <color name="colorPrimaryText">#424242</color>
+    <color name="colorMediumText">#606060</color>
     <color name="defaultTextColor">#808080</color>
 
 
