--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -8,9 +8,9 @@
     <dimen name="toolbar_height">80dp</dimen>
     <dimen name="fab_margin">16dp</dimen>
     <dimen name="small_icon">24dp</dimen>
-    <dimen name="small_margin">5dp</dimen>
-    <dimen name="medium_margin">10dp</dimen>
-    <dimen name="large_margin">15dp</dimen>
+    <dimen name="small">5dp</dimen>
+    <dimen name="medium">10dp</dimen>
+    <dimen name="large">15dp</dimen>
     <dimen name="list_item_margin">16dp</dimen>
     <dimen name="list_item_padding">16dp</dimen>
     <dimen name="list_item_top_margin">16dp</dimen>
