--- a/app/src/main/res/layout/fragment_add_medicine.xml
+++ b/app/src/main/res/layout/fragment_add_medicine.xml
@@ -2,7 +2,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.along.android.healthmanagement.fragments.CurrentMedicationTabFragment">
+    tools:context="com.along.android.healthmanagement.fragments.AddMedicineFormFragment">
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -60,7 +60,7 @@
         </android.support.design.widget.TextInputLayout>
 
         <LinearLayout
-            android:padding="26dp"
+            android:layout_marginTop="32dp"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="horizontal">
@@ -86,7 +86,5 @@
                 android:textColor="@color/greyE" />
         </LinearLayout>
     </LinearLayout>
-
-
 
 </FrameLayout>
