--- a/app/src/main/res/layout/list_item_current_medication.xml
+++ b/app/src/main/res/layout/list_item_current_medication.xml
@@ -12,13 +12,12 @@
         android:text="1"
         android:visibility="gone" />
 
-
     <ImageView
         android:id="@+id/ivMedicine"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginRight="@dimen/medium"
-        android:backgroundTint="@color/colorPrimaryText"
+        android:backgroundTint="@color/mediumLightIcon"
         android:background="@drawable/ic_medicine"/>
 
     <TextView
@@ -74,7 +73,7 @@
                 android:layout_width="16dp"
                 android:layout_height="16dp"
                 android:background="@drawable/ic_menu_notifications"
-                android:backgroundTint="@color/colorMediumText"/>
+                android:backgroundTint="@color/mediumLightIcon"/>
             <ImageView
                 android:id="@+id/ivMLNotificationIconActive"
                 android:layout_width="16dp"
@@ -102,7 +101,7 @@
                 android:layout_width="16dp"
                 android:layout_height="16dp"
                 android:background="@drawable/ic_delete_bin"
-                android:backgroundTint="@color/colorMediumText"/>
+                android:backgroundTint="@color/mediumLightIcon"/>
 
             <TextView
                 android:layout_width="wrap_content"
